updated jbr dependency versions

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <jbr-app-shell-layout>
 
-  <ng-container jbr-app-shell-toolbar-content>
+  <ng-container jbr-app-shell-header-content>
     <div class="controls">
       <div class="indicator" [ngClass]="{navigating: routeEventHandler.navigating}">
         <p>Navigating... </p>
@@ -14,7 +14,7 @@
     </div>
   </ng-container>
 
-  <ng-container jbr-app-shell-app-content>
+  <ng-container>
     <div class="content">
       <div class="left">
         <div class="settings">
